--- a/work/app/view/formAddBook.html
+++ b/work/app/view/formAddBook.html
@@ -11,7 +11,7 @@
 <body>
     <h2>Adicionar Livro</h2>
 
-    <form action="../process_forms/AddBook.php" method="post">
+    <form action="../controllers/AddBook.php" method="post">
         <label for="titulo">Título:</label>
         <input type="text" id="titulo" name="titulo" required><br>
 
