--- a/work/app/view/formDelBook.html
+++ b/work/app/view/formDelBook.html
@@ -11,7 +11,7 @@
 <body>
     <h2>Excluir Livro</h2>
 
-    <form action="../process_forms/DelBook.php" method="post">
+    <form action="../controllers/DelBook.php" method="post">
         <label for="titulo">Título do Livro:</label>
         <input type="text" id="titulo" name="titulo" required><br>
 
