--- a/work/app/view/formUptadeBook.html
+++ b/work/app/view/formUptadeBook.html
@@ -11,7 +11,7 @@
 <body>
     <h2>Alterar Livro</h2>
 
-    <form action="../process_forms/UpdateBook.php" method="post">
+    <form action="../controllers/UpdateBook.php" method="post">
         <label for="titulo">Título do Livro a ser Alterado:</label>
         <input type="text" id="titulo" name="titulo" required><br>
 
