--- a/work/app/view/formReadBook.html
+++ b/work/app/view/formReadBook.html
@@ -7,27 +7,13 @@
 
     <link rel="stylesheet" type="text/css" href="../style/style_livros.css">
     
-    <script>
-        function controlarOpcoesInsercao() {
-            var termoInput = document.getElementById('termo');
-            var tipoPesquisaSelect = document.getElementById('tipoPesquisa');
-
-            if (termoInput.value.trim() !== '') {
-                // Se algo for escrito, desabilita o campo de seleção
-                tipoPesquisaSelect.disabled = true;
-            } else {
-                // Se o campo estiver vazio, habilita o campo de seleção
-                tipoPesquisaSelect.disabled = false;
-            }
-        }
-    </script>
 </head>
 <body>
     <h2>Buscar Livro</h2>
 
     <form action="../process_forms/ReadBook.php" method="post">
         <label for="termo">Termo de Busca:</label>
-        <input type="text" id="termo" name="termo" required oninput="controlarOpcoesInsercao()"><br>
+        <input type="text" id="termo" name="termo" required><br>
 
         <label for="tipoPesquisa">Tipo de Pesquisa:</label>
         <select id="tipoPesquisa" name="tipoPesquisa" required>
