--- a/work/app/view/formReadBook.html
+++ b/work/app/view/formReadBook.html
@@ -11,7 +11,7 @@
 <body>
     <h2>Buscar Livro</h2>
 
-    <form action="../process_forms/ReadBook.php" method="post">
+    <form action="../controllers/ReadBook.php" method="post">
         <label for="termo">Termo de Busca:</label>
         <input type="text" id="termo" name="termo" required><br>
 
